--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,6 +1,6 @@
 name: pre-commit
 
-on: [pull_request]
+on: [push]
 
 jobs:
   pre-commit:
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.8
     - uses: pre-commit/action@v2.0.0
