--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = click,models,pytest,setuptools,sql_to_code
+known_third_party = click,jinja2,models,pytest,setuptools,sql_to_code
