--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     rev: 5.7.0
     hooks:
       - id: isort
+        args: ["--profile", "black"]
 
   - repo: https://github.com/codingjoe/relint/
     rev: 1.2.1
