Adjust template for new foreign key model

--- a/sql_to_code/templates/sqlalchemy.template
+++ b/sql_to_code/templates/sqlalchemy.template
@@ -18,6 +18,6 @@ class {{ table.table.class_name }}(Base):
     {% for field in table.table.schema %}{{ field.name }} = Column({{ field.type }}{% if field.primary_key %}, primary_key=True{% endif %})
     {% endfor %}
 
-    {% for field in table.alter_tables %}{{ field.foreign_key_name }} = Column("{{ field.type }}", ForeignKey("{{ field.result_table_name }}.{{ field.result_table_field_name }}"), ondelete="CASCADE")
+    {% for field in table.alter_tables %}{{ field.field_name}} = Column("{{ field.type }}", ForeignKey("{{ field.refer_to.table_name }}.{{ field.refer_to.field_name }}"), ondelete="CASCADE")
     {% endfor %}
 {% endfor %}
