Use updated FK model and context model in templates

--- a/sql_to_code/templates/sqlalchemy.template
+++ b/sql_to_code/templates/sqlalchemy.template
@@ -12,12 +12,9 @@ Base = declarative_base()
 {% endfor %}
 
 {% for table in g.tables %}
-class {{ table.table.class_name }}(Base):
-    __tablename__ = "{{ table.table.name }}"
+class {{ table.class_name }}(Base):
+    __tablename__ = "{{ table.name }}"
 
-    {% for field in table.table.schema %}{{ field.name }} = Column({{ field.type }}{% if field.primary_key %}, primary_key=True{% endif %})
-    {% endfor %}
-
-    {% for field in table.alter_tables %}{{ field.field_name}} = Column("{{ field.type }}", ForeignKey("{{ field.refer_to.table_name }}.{{ field.refer_to.field_name }}"), ondelete="CASCADE")
+    {% for field in table.schema %}{{ field.name }} = Column({{ field.type }}{% if field.primary_key %}, primary_key=True{% endif %}{% if field.foreign_key %}, ForeignKey("{{ field.foreign_key.table_name }}.{{ field.foreign_key.field_name }}"), ondelete="CASCADE"{% endif %})
     {% endfor %}
 {% endfor %}
