--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = black,click,jinja2,pytest,setuptools,sql_to_code
+known_third_party = black,click,jinja2,pyparsing,pytest,setuptools,sql_to_code
